solved the buttons refresh problems

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
               <button class="update-btn btn orange ">
                 <i class="fa fa-pencil-squere-o"></i> Update Meal
               </button>
-              <button class="delete-btn btn red ">
+              <button type="button" class="delete-btn btn red ">
                 <i class="fa fa-remove"></i> Delete Meal
               </button>
-              <button class="back-btn btn gray pull-right">
+              <button type="button" class="back-btn btn gray pull-right">
                 <i class="fa fa-chevron-circle-left"></i> Back
               </button>
             </div>
